--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<DOCTYPE html>
-  <html lang="en">
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", initial-scale=1.0>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Fixed comma placement -->
     <title>My Personal Website</title>
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-      <header id="home">
-        <h1 id="typing-text">
-        <p> Hi! I'm learning how to build a website! </p>
-    </body>
-  </html>
+</head>
+<body>
+    <header id="home">
+        <h1 id="typing-text">Hi! I'm learning how to build a website!</h1> <!-- Fixed missing closing tag -->
+    </header>
+</body>
+</html>
