Updated title and message in body index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Fixed comma placement -->
-    <title>My Personal Website</title>
+    <title>approximations</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="home">
-        <h1 id="typing-text">Hi! I'm learning how to build a website!</h1> <!-- Fixed missing closing tag -->
+        <h1 id="typing-text">approximations</h1> <!-- Fixed missing closing tag -->
     </header>
 </body>
 </html>
