Testing link with note image index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header id="home">
         <h1 id="typing-text">approximations</h1> <!-- Fixed missing closing tag -->
     </header>
+    <a href="page1.html">
+        <img src="note-2.png" alt="Note 2 Icon" width="50">
+    </a>
 </body>
 </html>
