--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> blah blah page 1</h1>
+    <h1> cool cool cool</h1>
     <p> blah bkah blah.</p>
   </body>
 </html>
