--- a/page1.html
+++ b/page1.html
@@ -6,5 +6,8 @@
   <body>
     <h1> cool cool cool</h1>
     <p> blah bkah blah.</p>
+
+    <button onclick="window.location.href='index.html';">Back to Home Page</button>
+    
   </body>
 </html>
