--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,8 @@
     <p> blah bkah blah.</p>
 
     <button onclick="window.location.href='index.html';">Back to Home Page</button>
+  
+    <img src="images/aristotle_approx.png" alt="Quote" width="100">
     
   </body>
 </html>
