--- a/directory1.html
+++ b/directory1.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title>Poem 1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Directory 1</title>
+    <link rel="stylesheet" href="desktop_style.css">
   </head>
+  
   <body>
     <h1> cool cool cool</h1>
     <p> blah bkah blah.</p>
