--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <header id="desktop">
     </header>
+
+    <form id="windows">
+    <!-- Login and Shutdown -->
+    <input type="checkbox" name="start-button-input" id="start-button-input" />
+    <div id="background"></div>
     
     <a href="directory1.html" style="text-decoration: none; color: inherit;">
     <div style="text-align: center;">
