--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 <body>
 
    <div class="image-links-container">
-    <a href="directory1.html">
+    <a href="directory1.html" class="folder folder1">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 1">
     </a>
-    <a href="directory2.html">
+    <a href="directory2.html" class="folder folder1">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 2">
     </a>
     <a href="page3.html">
