--- a/directory1.html
+++ b/directory1.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Directory 1</title>
+    <title>either</title>
     <link rel="stylesheet" href="directory_style.css">
   </head>
 
