--- a/directory2.html
+++ b/directory2.html
@@ -1,12 +1,10 @@
 <html>
   <head>
-    <title>Poem 1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>or</title>
+    <link rel="stylesheet" href="directory_style.css">
   </head>
   <body>
-    <h1> cool cool cool</h1>
-    <p> blah bkah blah.</p>
-
+    
     <img src="images/aristotle_approx.png" alt="Quote" width="100">
         
   </body>
