--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 <body>
 
    <div class="image-links-container">
-    <a href="directory1.html" class="folder folder1">
+     
+    <a href="directory1.html" style="background-color: #c3c3c3;">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 1">
     </a>
-    <a href="directory2.html" class="folder folder1">
+    <a href="directory2.html" style="background-color: #c3c3c3;">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 2">
     </a>
     <a href="page3.html">
