--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
    <div class="image-links-container">
      
-    <a href="directory1.html" style="background-color: #c3c3c3;">
+    <a href="directory1.html">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 1">
     </a>
-    <a href="directory2.html" style="background-color: #c3c3c3;">
+    <a href="directory2.html">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 2">
     </a>
     <a href="page3.html">
