--- a/directory2.html
+++ b/directory2.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>or</title>
-    <link rel="stylesheet" href="directory_style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
-    <img src="images/aristotle_approx.png" alt="Quote" width="100">
+    <img src="images/aristotle_approx.png" alt="Quote"">
         
   </body>
 </html>
