--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ ither<!DOCTYPE html>
 
    <div class="image-links-container">
      
-    <a href="either.html">
+    <a href="directory1.html">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 1">
     </a>
-    <a href="or.html">
+    <a href="directory2.html">
         <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 2">
     </a>
      
