--- a/directory2.html
+++ b/directory2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>either</title>
-    <link rel="stylesheet" href="directory_style.css">
+    <title>Directory 2</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
