--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ ither<!DOCTYPE html>
 
         .image-links-container a {
             text-decoration: none;
-            color: #c3c3c3;
+            background-color: #c3c3c3;
         }
 
         .image-links-container img {
