--- a/directory1.html
+++ b/directory1.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Directory 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="directory_style.css">
   </head>
   <body>
     
