--- a/directory2.html
+++ b/directory2.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Directory 2</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="directory_style.css>
   </head>
 
   <body>
