--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         }
 
         .image-links-container p {
-            margin-top: 5px; /* Space between image and text */
+            margin-top: 2px; /* Space between image and text */
+            font-size: 5px
         }
 
     </style>
