--- a/directory2.html
+++ b/directory2.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>Directory 2</title>
-    <link rel="stylesheet" href="directory_style.css>
+    <title>Directory 1</title>
+    <link rel="stylesheet" href="directory_style.css">
   </head>
-
   <body>
-    <img src="images/aristotle_approx.png" alt="Quote">
+    
+    <img src="images/aristotle_approx.png" alt="Quote"">
         
   </body>
 </html>
