--- a/directory1.html
+++ b/directory1.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     
-    <img src="images/kingofapproximation.JPEG" alt="Quote"">
+    <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote"">
         
   </body>
 </html>
