--- a/directory2.html
+++ b/directory2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     
-    <img src="images/aristotle_approx.png" alt="Quote"">
+    <img src="images/aristotle_approx.png" alt="Aristotle Quote"">
         
   </body>
 </html>
