--- a/directory1.html
+++ b/directory1.html
@@ -6,6 +6,8 @@
   <body>
     
     <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote"">
+
+    <p>Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014. </p>
         
   </body>
 </html>
