--- a/directory1.html
+++ b/directory1.html
@@ -8,6 +8,8 @@
     <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote"">
 
     <p> Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014. </p>
+
+    <p> Disclaimer: I, a jester of approximation, haven't read any of the titles mentioned on this page (including the quote). </p>
         
   </body>
 </html>
