--- a/directory1.html
+++ b/directory1.html
@@ -9,7 +9,7 @@
 
     <p> Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014. </p>
 
-    <p> Disclaimer: I haven't read any of the titles mentioned on this page (including the quote). Maybe that makes me a jester of approximation. </p>
+    <p> Disclaimer: I haven't read any of the authors mentioned on this page (including the quote). Maybe that makes me a jester of approximation. </p>
         
   </body>
 </html>
