Add internet explorer icon index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         <img src="images/directory_closed-4.png" alt="Folder 2">
         <p>or</p>
     </a>
+
+     <a href="https://poets.org/poem/blueberries">
+        <img src="images/msie1-2.png" alt="Internet Explorer Icon">
+        <p></p>
+    </a>
      
     <!-- Repeat for all 30 images -->
 </div>
