--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 
      <a href="https://poets.org/poem/blueberries">
         <img src="images/msie1-2.png" alt="Internet Explorer Icon">
-        <p></p>
+        <p>04_01</p>
+    </a>
+
+     <a href="https://www.poetryfoundation.org/poems/48417/high-windows">
+        <img src="images/notepad-2.png" alt="Notepad Icon">
+        <p>04_02</p>
     </a>
      
     <!-- Repeat for all 30 images -->
