--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </a>
 
      <a href="https://www.poetryfoundation.org/poems/48417/high-windows">
-        <img src="images/notepad-2.png" alt="Notepad Icon">
+        <img src="images/file_windows-2.png" alt="Notepad Icon">
         <p>04_02</p>
     </a>
      
