--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     </a>
 
      <a href="#" id="open-popup">
-        <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Help Book">
+        <img src="images/help_book_cool-4.png" alt="Help Book">
+        <p>Help</p>
     </a>
 
      <a href="https://poets.org/poem/blueberries">
