--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="window-body">
             <p>Happy National Poetry Month!</p>
-          <p> I'm using it as an excuse to experiment with HTML and CSS by sharing poems I’ve read and liked..<p/>
+          <p> I'm using it as an excuse to experiment with HTML and CSS by sharing poems I’ve read and liked.<p/>
         </div>
     </div>
      
