--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
      
     <a href="directory1.html">
         <img src="images/directory_closed-4.png" alt="Folder 1">
-        <p>Either</p>
+        <p>either</p>
     </a>
     
     <a href="directory2.html">
         <img src="images/directory_closed-4.png" alt="Folder 2">
-        <p>Or</p>
+        <p>or</p>
     </a>
 
      <a href="#" id="open-popup">
