--- a/directory2.html
+++ b/directory2.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <img src="images/aristotle_approx.png" alt="Aristotle Quote"">
-    <p>“Model Representations.” BIOL 6v00, 11 Mar. 2025, University of Texas at Dallas. Class lecture.</p>
+    <p>“Source: Model Representations.” BIOL 6v00, 11 Mar. 2025, University of Texas at Dallas. Class lecture.</p>
   </body>
 </html>
