--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </div>
         <div class="window-body">
             <p>Happy National Poetry Month!</p>
-          <p> I'm using it as an excuse to experiment with HTML and CSS by sharing poems I’ve read and liked.<p/>
+          <p> I'm using it as an excuse to play with HTML and CSS by sharing poems I’ve read and liked.<p/>
+            <img src="images/april2025.JPEG" alt="April 2025 Poetry Month Poster" width="25%" heigth="25%">
         </div>
     </div>
      
