--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         <p>04_02</p>
     </a>
 
+     <a href="april3.html">
+        <img src="directory_open_file_mydocs" alt="Open File Icon">
+        <p>04_03</p>
+    </a>
+
      <!-- Popup Window (Uses 98.css) -->
     <div class="window" id="popup">
         <div class="title-bar">
