--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </a>
 
      <a href="april3.html">
-        <img src="directory_open_file_mydocs" alt="Open File Icon">
+        <img src="directory_open_file_mydocs-4.png" alt="Open File Icon">
         <p>04_03</p>
     </a>
 
@@ -77,7 +77,7 @@
         <div class="window-body">
             <p>Happy National Poetry Month!</p>
           <p> I'm using it as an excuse to play with HTML and CSS by sharing poems I’ve read and liked.<p/>
-            <img src="images/april2025.JPEG" alt="April 2025 Poetry Month Poster" width="75%" heigth="75%">
+            <img src="images/april2025.JPEG" alt="April 2025 Poetry Month Poster">
         </div>
     </div>
      
