--- a/april3.html
+++ b/april3.html
@@ -8,6 +8,7 @@
             height: 150px; /* Set a fixed height */
             object-fit: cover; /* Crop to fit without stretching */
         }
+      </style>
   </head>
       
   <body>
