--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <p>04_02</p>
     </a>
 
-     <a href="april3.html">
-        <img src="images/directory_open_file_mydocs-4.png" alt="Open File Icon">
+     <a href="https://poets.org/poem/phosphorescence">
+        <img src="images/notepad-2.png" alt="Open File Icon">
         <p>04_03</p>
     </a>
 
