--- a/directory2.html
+++ b/directory2.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="directory_style.css">
   </head>
   <body>
-    <img src="images/aristotle_approx.png" alt="Aristotle Quote"" width="50%" height="50%">
+    <img src="images/aristotle_approx.png" alt="Aristotle Quote"" width="50%" height=auto>
     <p>Source: "Model Representations.” BIOL 6v00, 11 Mar. 2025, University of Texas at Dallas. Class lecture.</p>
   </body>
 </html>
