--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         <p>04_03</p>
     </a>
 
+     <a href="https://www.poetryfoundation.org/poems/45479/when-i-heard-the-learnd-astronomer">
+        <img src="https://win98icons.alexmeub.com/icons/png/shut_down_normal-2.png" alt="Shut Down Monitor Icon">
+        <p>04_04</p>
+    </a>
+
      <!-- Popup Window (Uses 98.css) -->
     <div class="window" id="popup">
         <div class="title-bar">
