--- a/directory1.html
+++ b/directory1.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     
-    <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote"" width="50%" height="50%">
+    <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote"" class="responsive-img">
 
     <p> Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014. </p>
 
