--- a/directory1.html
+++ b/directory1.html
@@ -3,13 +3,15 @@
     <title>Directory 1</title>
     <link rel="stylesheet" href="directory_style.css">
   </head>
+  
   <body>
     
-    <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote"" class="responsive-img">
-
-    <p> Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014. </p>
-
-    <p> Disclaimer: I haven't read any of the authors mentioned on this page (including the pull quote). I guess that makes me a jester of approximation. </p>
+  <div class="image-with-text">
+  <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote" class="responsive-img">
+  <p class="image-caption">Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014.</p>
+  <p class="image-caption">Disclaimer: I haven't read any of the authors mentioned on this page (including the pull quote). I guess that makes me a jester of approximation.</p>
+  </div>
         
   </body>
 </html>
+
