--- a/directory2.html
+++ b/directory2.html
@@ -4,7 +4,12 @@
     <link rel="stylesheet" href="directory_style.css">
   </head>
   <body>
-    <img src="images/aristotle_approx.png" alt="Aristotle Quote"" class="responsive-img">
-    <p>Source: "Model Representations.” BIOL 6v00, 11 Mar. 2025, University of Texas at Dallas. Class lecture.</p>
+
+  <div class="image-with-text">
+  <img src="images/aristotle_approx.png" alt="Aristotle Quote" class="responsive-img">
+  <p class="image-caption">Source: "Model Representations.” BIOL 6v00, 11 Mar. 2025, University of Texas at Dallas. Class lecture.</p>
+  </div>
+
+    
   </body>
 </html>
