--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>04_03</p>
     </a>
 
-    <a href=> "april4.html"
+    <a href="april4.html"> 
         <img src="https://win98icons.alexmeub.com/icons/png/msn_cool-4.png" alt="msn icon">
         <p>04_04</p>
     </a>
