--- a/april4.html
+++ b/april4.html
@@ -8,13 +8,15 @@
     
   <div class="image-with-text">
   <h2> April 4th Poem </h2>
+    <img src="poem images/egypt_poem.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
+
 
   <h2> Poem Context:</h2>
   <img src="poem images/egypt_context_1.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
   <img src="poem images/egypt_context_2.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
 
   <p class="image-caption">Source: Lawall, Sarah N, and Maynard Mack. The Norton Anthology of World Literature. Second Edition ed., vol. A, New York, W. W. Norton & Company, 29 July 2003.</p>
-  <p class="image-caption"> Misc: <a> href =https://betawiki.net/wiki/Windows_98>Memphis< </a></p>
+  <p class="image-caption"> Misc: <a>href="https://betawiki.net/wiki/Windows_98">Memphis< </a></p>
 
 
   </div>
