--- a/april4.html
+++ b/april4.html
@@ -7,16 +7,18 @@
   <body>
     
   <div class="image-with-text">
-  <h2> April 4th Poem </h2>
+  <h3> April 4th Poem: </h3>
     <img src="poem images/egypt_poem.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
 
 
-  <h2> Poem Context:</h2>
+  <h3> Poem Context Section 1:</h3>
   <img src="poem images/egypt_context_1.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
+
+   <h3> Poem Context Section 2:</h3> 
   <img src="poem images/egypt_context_2.JPEG" alt="Ancient Egyptian Poem Context" class="responsive-img">
 
   <p class="image-caption">Source: Lawall, Sarah N, and Maynard Mack. The Norton Anthology of World Literature. Second Edition ed., vol. A, New York, W. W. Norton & Company, 29 July 2003.</p>
-  <p class="image-caption"> Misc: <a>href="https://betawiki.net/wiki/Windows_98">Memphis< </a></p>
+  <p class="image-caption"> Misc: <a href="https://betawiki.net/wiki/Windows_98">Memphis</a> </p>
 
 
   </div>
