--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </a>
 
     <a href="april4.html"> 
-        <img src="https://win98icons.alexmeub.com/icons/png/msn_cool-4.png" alt="msn icon">
+        <img src="images" alt="MSN icon">
         <p>04_04</p>
     </a>
 
