--- a/directory1.html
+++ b/directory1.html
@@ -9,7 +9,7 @@
   <div class="image-with-text">
   <img src="images/kingofapproximation.JPEG" alt="King of Approximation Quote" class="responsive-img">
   <p class="image-caption">Source: Karl Ove Knausgård, and Don Bartlett. My Struggle. Book One. Brooklyn, Ny Archipelago Books, 2014.</p>
-  <p class="image-caption">Disclaimer: I haven't read any of the authors mentioned on this page (including the pull quote).</p>
+  <p class="image-caption">Disclaimer: I haven't read or really heard of any of the authors mentioned on this page (including the pull quote).</p>
   <p class="image-caption">I guess that makes me a jester of approximation.</p>
 
   </div>
