--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
         <p>04_04</p>
     </a>
 
+     <a href="https://www.folger.edu/explore/shakespeares-works/shakespeares-sonnets/read/129/">
+        <img src="images/notepad-2.png" alt="Note Pad Icon">
+        <p>04_05</p>
+    </a>
+
      <!-- Popup Window (Uses 98.css) -->
     <div class="window" id="popup">
         <div class="title-bar">
