--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </a>
 
     <a href="april4.html"> 
-        <img src="images" alt="MSN icon">
+        <img src="images/msn_cool-4" alt="MSN icon">
         <p>04_04</p>
     </a>
 
