--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </a>
 
      <a href="https://www.folger.edu/explore/shakespeares-works/shakespeares-sonnets/read/129/">
-        <img src="images/notepad-2.png" alt="Note Pad Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/netshow_notransm-2.png" alt="Netshow Notransm Icon">
         <p>04_05</p>
     </a>
 
