--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
         <p>04_05</p>
     </a>
 
+     <a href="april6.html"> 
+        <img src="https://win98icons.alexmeub.com/icons/png/font_opentype-0.png" alt="Opentype Font icon">
+        <p>04_06</p>
+    </a>
+
      <!-- Popup Window (Uses 98.css) -->
     <div class="window" id="popup">
         <div class="title-bar">
