--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </a>
 
      <!-- Popup Window (Uses 98.css) -->
-     <div class="window" id="popup-1">
+     <div class="window" id="popup">
         <div class="title-bar">
             <div class="title-bar-text">Help</div>
             <div class="title-bar-controls">
@@ -101,7 +101,7 @@
         </div>
     </div>
      
-    <div class="window" id="popup-2">
+    <div class="window" id="popup">
         <div class="title-bar">
             <div class="title-bar-text">04_07</div>
             <div class="title-bar-controls">
