--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
      
     <style>
-    #popup {
+    #popup-1, #popup-2 {
         display: none; /* Hide the popup initially */
         position: absolute;
         top: 50%;
