--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="title-bar">
             <div class="title-bar-text">Help</div>
             <div class="title-bar-controls">
-                <button aria-label="Close" id="close-popup"></button>
+                <button aria-label="Close" id="close-popup-1"></button>
             </div>
         </div>
         <div class="window-body">
@@ -105,7 +105,7 @@
         <div class="title-bar">
             <div class="title-bar-text">04_07</div>
             <div class="title-bar-controls">
-                <button aria-label="Close" id="close-popup"></button>
+                <button aria-label="Close" id="close-popup-2"></button>
             </div>
         </div>
         <div class="window-body">
