--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           
           <a href="https://youtu.be/SRr0ukTQr8Y?si=1OLB3XHwXJ6CFmIj">
                   <img src="https://win98icons.alexmeub.com/icons/png/media_player_file-0.png" alt="Media Player File Icon">
-                  <p>:-)</p>
+                  <p>fun</p>
               </a>
         </div>
     </div>
