--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
           <a href="https://www.poetryfoundation.org/poems/46808/girl-in-a-library">
                   <img src="https://win98icons.alexmeub.com/icons/png/message_file-0.png" alt="Message File Icon">
-                  <p>Addendum</p>
+                  <p>Digression</p>
               </a>
 
           
