--- a/april6.html
+++ b/april6.html
@@ -12,7 +12,7 @@
     <img src="poem images/odio_2.JPEG" alt="Ode to Hudson Poem Page 2" class="responsive-img">
 
 
-  <p class="image-caption">Source: Odio, Eunice. Territory of Dawn. Translated by Keith Ekiss et al., The Bitter Oleander Press, 2016.</p>
+  <p class="image-caption">Source: Odio, Eunice. Territory of Dawn. Translated by Keith Ekiss et al., The Bitter Oleander Press, 2016, pp. 110–113.</p>
 
 
   </div>
