--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
        <img src="https://win98icons.alexmeub.com/icons/png/file_blue_grad_paint-0.png" alt="Blue Grad Paint Icon">
        <p>04_08</p>
      </a>
+
+      <a href="april9.html" >
+       <img src="https://win98icons.alexmeub.com/icons/png/note-0.png" alt="Note-0 Icon">
+       <p>04_09</p>
+     </a>
      
      
     <style>
