--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
      </a>
 
       <a href="april9.html" >
-       <img src="https://win98icons.alexmeub.com/icons/png/note-0.png" alt="Note-0 Icon">
+       <img src="https://win98icons.alexmeub.com/icons/png/outlook_express-4.png" alt="Outlook Express Icon">
        <p>04_09</p>
      </a>
      
