--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
        <img src="https://win98icons.alexmeub.com/icons/png/outlook_express-4.png" alt="Outlook Express Icon">
        <p>04_09</p>
      </a>
-     
+
+     <a href="april10.html" >
+        <img src="https://win98icons.alexmeub.com/icons/png/font_tt_green-0.png" alt="Font tt Green Icon">
+        <p>04_09</p>
+    </a>
      
     <style>
     #popup-1, #popup-2 {
