--- a/april10.html
+++ b/april10.html
@@ -8,7 +8,7 @@
     
   <div class="image-with-text">
   <h3> April 10th Poem: </h3>
-    <h2> Original Portuguese Text </h2>
+    <h2> Original Brazilian Portuguese Text </h2>
     <img src="poem images/teeth_portuguese_1.JPG" alt="Teeth Poem Page 1 (Portuguese)" class="responsive-img">
     <img src="poem images/teeth_portuguese_2.JPG" alt="Teeth Poem Page 2 (Portuguese)"" class="responsive-img">
     <img src="poem images/teeth_portuguese_3.JPG" alt="Teeth Poem Page 3 (Portuguese)"" class="responsive-img">
@@ -24,7 +24,7 @@
     <img src="poem images/teeth_context_3.JPG" alt="Teeth Context Page 3)"" class="responsive-img">
     <img src="poem images/teeth_context_4.JPG" alt="Teeth Context Page 4)"" class="responsive-img">
 
-  <p class="image-caption">Source: </p>
+  <p class="image-caption">Source: Borges, Stephanie. Made of Dream. Translated by Livia Lima , Ugly Duckling Press, Dec. 2023.</p>
 
 
   </div>
