--- a/index.html
+++ b/index.html
@@ -150,6 +150,24 @@
         <p>04_10</p>
     </a>
 
+    <a href="april11.html" >
+        <img src="https://win98icons.alexmeub.com/icons/png/game_hearts.png" alt="Game Hearts Icon">
+        <p>04_11</p>
+    </a>
+
+    <a href="https://www.poetryfoundation.org/poems/1636746/notes-on-devotion" >
+        <img src="https://win98icons.alexmeub.com/icons/png/game_mine_1-0.png" alt="Game Mine Icon">
+        <p>04_12</p>
+    </a>
+
+    <a a href="https://poets.org/poem/rebuke-spell"
+        img src="https://win98icons.alexmeub.com/icons/png/game_spider-0.png" alt="Spider Icon"
+        <p>04_13</p>
+    </a>   
+
+    <a href="https://poets.org/poem/galaxies"
+        img src="https://win98icons.alexmeub.com/icons/png/shut_down_cool-5.png" alt="Shut Down Icon"
+        <p>04_14</p>
      
     <style>
     #popup-1, #popup-2 {
