--- a/index.html
+++ b/index.html
@@ -161,13 +161,14 @@
     </a>
 
     <a a href="https://poets.org/poem/rebuke-spell"
-        img src="https://win98icons.alexmeub.com/icons/png/game_spider-0.png" alt="Spider Icon"
+        <img src="https://win98icons.alexmeub.com/icons/png/game_spider-0.png" alt="Spider Icon">
         <p>04_13</p>
     </a>   
 
     <a href="https://poets.org/poem/galaxies"
-        img src="https://win98icons.alexmeub.com/icons/png/shut_down_cool-5.png" alt="Shut Down Icon"
+        <img src="https://win98icons.alexmeub.com/icons/png/shut_down_cool-5.png" alt="Shut Down Icon">
         <p>04_14</p>
+    </a>
      
     <style>
     #popup-1, #popup-2 {
