--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
         <p>04_12</p>
     </a>
 
-    <a a href="https://poets.org/poem/rebuke-spell"
+    <a href="https://poets.org/poem/rebuke-spell" >
         <img src="https://win98icons.alexmeub.com/icons/png/game_spider-0.png" alt="Spider Icon">
         <p>04_13</p>
     </a>   
 
-    <a href="https://poets.org/poem/galaxies"
+    <a href="https://poets.org/poem/galaxies" >
         <img src="https://win98icons.alexmeub.com/icons/png/shut_down_cool-5.png" alt="Shut Down Icon">
         <p>04_14</p>
     </a>
