Add april 16 poem

--- a/index.html
+++ b/index.html
@@ -175,6 +175,10 @@
         <p>04_15</p>
     </a>
 
+    <a href="https://poets.org/poem/loneliness-0" >
+        <img src="https://win98icons.alexmeub.com/icons/png/color_profile_gray-0.png" alt="Color Progile Gray Icon"
+        <p>04_16</p>
+    </a>
     
      
     <style>
