--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <p>04_17_i</p>
     </a>
 
-    <a href="april17_extra.html"> 
+    <a href="april17_ii.html"> 
         <img src="https://win98icons.alexmeub.com/icons/png/entire_network_globe-0.png" alt="Entire Network Globe icon">
         <p>04_17_ii</p>
     </a>
