--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
         <img src="https://win98icons.alexmeub.com/icons/png/entire_network_globe-0.png" alt="Entire Network Globe icon">
         <p>04_17_ii</p>
     </a>
+
+    <a href="april18.html" >
+        <img src="https://win98icons.alexmeub.com/icons/png/java-0.png" alt="Java 0 Icon">
+        <p>04_18</p>
+    </a>
     
 
     <style>
