Add april 19 poem

--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
         <img src="https://win98icons.alexmeub.com/icons/png/java-0.png" alt="Java 0 Icon">
         <p>04_18</p>
     </a>
+
+    <a href="april19.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/chart1-4.png" alt="Chart 1-4 Icon">
+        <p>04_19</p>
+    </a>
     
 
     <style>
