Add april 21 poem

--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
         <img src="https://win98icons.alexmeub.com/icons/png/kodak_imaging_file-0.png" alt="Kodak Imaging File Icon">
         <p>04_20</p>
     </a>
+
+    <a href="april21.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/application_hourglass_small-4.png" alt="Application Hourglass Icon">
+        <p>04_21</p>
+    </a>
     
 
     <style>
