--- a/april18.html
+++ b/april18.html
@@ -10,7 +10,7 @@
 
   <h3> April 18th: </h3>
     
-    <img src="poem images/kokinshu_poems.JPG" alt="Kokinshu Poems" class="responsive-img">
+    <img src="poem images/kokinshu_v2.jpg" alt="Kokinshu Poems" class="responsive-img">
 
     <h2> Context: </h2>
 
