Used icon links from website

--- a/april_html_files/april6.html
+++ b/april_html_files/april6.html
@@ -8,8 +8,8 @@
     
   <div class="image-with-text">
   <h3> April 6th Poem: </h3>
-    <img src="poem images/odio_1.JPEG" alt="Ode to Hudson Poem Page 1" class="responsive-img">
-    <img src="poem images/odio_2.JPEG" alt="Ode to Hudson Poem Page 2" class="responsive-img">
+    <img src="poem_images/odio_1.JPEG" alt="Ode to Hudson Poem Page 1" class="responsive-img">
+    <img src="poem_images/odio_2.JPEG" alt="Ode to Hudson Poem Page 2" class="responsive-img">
 
 
   <p class="image-caption">Source: Odio, Eunice. Territory of Dawn. Translated by Keith Ekiss et al., The Bitter Oleander Press, 2016, pp. 110–113.</p>
