--- a/april_html_files/april9.html
+++ b/april_html_files/april9.html
@@ -8,7 +8,7 @@
     
   <div class="image-with-text">
   <h3> April 9th Poem: </h3>
-    <img src="poem images/sternly_departing.jpg" alt="Sternly Departing Poem" class="responsive-img">
+    <img src="poem_images/sternly_departing.jpg" alt="Sternly Departing Poem" class="responsive-img">
 
   <p class="image-caption">Source: Halliday, Mark . Poetry. 1st ed., vol. 187, Poetry Foundation, Oct. 2005, p. 26.</p>
 
