--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
    <div class="image-links-container">
      
     <a href="directory1.html">
-        <img src="images/directory_closed-4.png" alt="Folder 1">
+        <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 1">
         <p>either</p>
     </a>
     
     <a href="directory2.html">
-        <img src="images/directory_closed-4.png" alt="Folder 2">
+        <img src="https://win98icons.alexmeub.com/icons/png/directory_closed-4.png" alt="Folder 2">
         <p>or</p>
     </a>
 
     <!-- Help Book Popup Window (Uses 98.css) -->
      <a href="#" id="open-popup-1">
-        <img src="images/help_book_cool-4.png" alt="Help Book">
+        <img src="https://win98icons.alexmeub.com/icons/png/help_book_cool-4.png" alt="Help Book">
         <p>Help</p>
     </a>
 
@@ -44,22 +44,22 @@
     <!-- Help Book -->
 
      <a href="https://poets.org/poem/blueberries">
-        <img src="images/msie1-2.png" alt="Internet Explorer Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/msie1-2.png" alt="Internet Explorer Icon">
         <p>04_01</p>
     </a>
 
      <a href="https://www.poetryfoundation.org/poems/48417/high-windows">
-        <img src="images/file_windows-2.png" alt="Notepad Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/file_windows-2.png" alt="Windows File Icon">
         <p>04_02</p>
     </a>
 
      <a href="https://poets.org/poem/phosphorescence">
-        <img src="images/video_mk-2.png" alt="Video File Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/video_mk-2.png" alt="Video File Icon">
         <p>04_03</p>
     </a>
 
     <a href="april4.html"> 
-        <img src="images/msn_cool-4.png" alt="MSN icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/msn.png" alt="MSN icon">
         <p>04_04</p>
     </a>
 
