--- a/directory2.html
+++ b/directory2.html
@@ -6,7 +6,7 @@
   <body>
 
   <div class="image-with-text">
-  <img src="images/aristotle_approx.png" alt="Aristotle Quote" class="responsive-img">
+  <img src="poem_images/aristotle_approx.png" alt="Aristotle Quote" class="responsive-img">
   <p class="image-caption">Source: "Model Representations.” BIOL 6v00, 11 Mar. 2025, University of Texas at Dallas. Class lecture.</p>
   </div>
 
