--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p>04_05</p>
     </a>
 
-     <a href="april6.html"> 
+     <a href="april_html_files/april6.html"> 
         <img src="https://win98icons.alexmeub.com/icons/png/font_opentype-0.png" alt="Opentype Font icon">
         <p>04_06</p>
     </a>
@@ -116,17 +116,17 @@
        <p>04_08</p>
      </a>
 
-      <a href="april9.html" >
+      <a href="april_html_files/april9.html" >
        <img src="https://win98icons.alexmeub.com/icons/png/outlook_express-4.png" alt="Outlook Express Icon">
        <p>04_09</p>
      </a>
 
-     <a href="april10.html" >
+     <a href="april_html_files/april10.html" >
         <img src="https://win98icons.alexmeub.com/icons/png/font_tt_green-0.png" alt="Font tt Green Icon">
         <p>04_10</p>
     </a>
 
-    <a href="april11.html" >
+    <a href="april_html_files/april11.html" >
         <img src="https://win98icons.alexmeub.com/icons/png/game_hearts.png" alt="Game Hearts Icon">
         <p>04_11</p>
     </a>
@@ -161,17 +161,17 @@
         <p>04_17_i</p>
     </a>
 
-    <a href="april17_ii.html"> 
+    <a href="april_html_files/april17_ii.html"> 
         <img src="https://win98icons.alexmeub.com/icons/png/entire_network_globe-0.png" alt="Entire Network Globe icon">
         <p>04_17_ii</p>
     </a>
 
-    <a href="april18.html" >
+    <a href="april_html_files/april18.html" >
         <img src="https://win98icons.alexmeub.com/icons/png/java-0.png" alt="Java 0 Icon">
         <p>04_18</p>
     </a>
 
-    <a href="april19.html">
+    <a href="april_html_files/april19.html">
         <img src="https://win98icons.alexmeub.com/icons/png/chart1-4.png" alt="Chart 1-4 Icon">
         <p>04_19</p>
     </a>
@@ -182,7 +182,7 @@
     </a>
 
     <!-- 
-    <a href="april21.html">
+    <a href="april_html_files/april21.html">
         <img src="https://win98icons.alexmeub.com/icons/png/application_hourglass_small-4.png" alt="Application Hourglass Icon">
         <p>04_21</p>
     </a>
