--- a/april_html_files/april10.html
+++ b/april_html_files/april10.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>April 10</title>
-    <link rel="stylesheet" href="directory_style.css">
+    <link rel="stylesheet" href="../directory_style.css">
   </head>
   
   <body>
