--- a/april_html_files/april18.html
+++ b/april_html_files/april18.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>April 18</title>
-    <link rel="stylesheet" href="directory_style.css">
+    <link rel="stylesheet" href="../directory_style.css">
   </head>
   
   <body
