Correct poem image file path issue

--- a/april_html_files/april11.html
+++ b/april_html_files/april11.html
@@ -9,10 +9,10 @@
   <div class="image-with-text">
   <h3> April 11th Poem: </h3>
     <h2> Original Spanish Text </h2>
-    <img src="poem_images/captivated_spanish.JPG" alt="The Captivated Lover (Spanish) Poem" class="responsive-img">
+    <img src="../poem_images/captivated_spanish.JPG" alt="The Captivated Lover (Spanish) Poem" class="responsive-img">
     
     <h2> English Translation </h2>
-    <img src="poem_images/captivated_english.JPG" alt="The Captivated Lover Poem (English) Poem" class="responsive-img">
+    <img src="../poem_images/captivated_english.JPG" alt="The Captivated Lover Poem (English) Poem" class="responsive-img">
 
   <p class="image-caption">Source: Estrada, Rafael. Devoured by the Moon. Translated by Steven Stewart, Hanging Loose Press, 2004, pp. 66–67.</p>
 
