--- a/april_html_files/april17_ii.html
+++ b/april_html_files/april17_ii.html
@@ -8,7 +8,7 @@
     
   <div class="image-with-text">
   <h3> April 17th (ii): </h3>
-    <img src="poem_images/billy_collins_her_poem.jpg" alt="Her (poem)" class="responsive-img">
+    <img src="../poem_images/billy_collins_her_poem.jpg" alt="Her (poem)" class="responsive-img">
     
   <p class="image-caption">Source: Collins, Billy. Poetry. 2nd ed., vol. 193, Poetry Foundation, Nov. 2008.</p>
   <p>This poem came from a magazine I chose out of a stack of editions offered to me by a woman in the Center for Translation Studies two weeks ago. The office sits in the corner of a curved hallway on the quiet top most floor of Jonssen (twice I confused it for Green Hall on the sky bridge), and the woman had been transcribing an email while an old German professor (who I interviewed for 60 minutes once five years ago) dictated. I doubt he recognized me, but his blue eyes were uncannily discerning and his questions to me more so. I think anyone over 85 is like that though. Is wisdom housed in the eyes? Or maybe a bullshit detector. Anyway, he made me nervous, so I quickly selected this edition (alongside three others) because I liked its cover, a girl with chainmail hair colored in yellow, backed by blue. 
