--- a/april_html_files/april18.html
+++ b/april_html_files/april18.html
@@ -10,11 +10,11 @@
 
   <h3> April 18th: </h3>
     
-    <img src="poem_images/kokinshu_v2.jpg" alt="Kokinshu Poems" class="responsive-img">
+    <img src="../poem_images/kokinshu_v2.jpg" alt="Kokinshu Poems" class="responsive-img">
 
     <h2> Context: </h2>
 
-    <img src="poem_images/kokinshu_context.JPG" alt="Kokinshu Context" class="responsive-img">
+    <img src="../poem_images/kokinshu_context.JPG" alt="Kokinshu Context" class="responsive-img">
     
   <p class="image-caption">Source: Lawall, Sarah N, and Maynard Mack. The Norton Anthology of World Literature. Second Edition ed., vol. A, New York, W. W. Norton & Company, 29 July 2003.</p>
 
