April 21 Poem Uploaded

--- a/april_html_files/april21.html
+++ b/april_html_files/april21.html
@@ -8,12 +8,8 @@
     
   <div class="image-with-text">
   <h3> April 21st Poem: </h3>
-    <img src="../poem_images/lars_gustafsson_1.jpg" alt="Sternly Departing Poem" class="responsive-img">
-    <img src="../poem_images/lars_gustafsson_2.jpg" alt="Sternly Departing Poem" class="responsive-img">
-
-  <p class="image-caption">Source: Gustafsson, Lars. A Time in Xanadu. Translated by John Irons, Copper Canyon Press, 2008, pp. 17–18.</p>
-
-
+    <img src="../poem_images/bogland.jpg" alt="Sternly Departing Poem" class="responsive-img">
+    <p class="image-caption">Source: Heaney, Seamus. "Bogland." 1969. </p>
   </div>
         
   </body>
