--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
         <p>04_22</p>
     </a>
 
+    <a href="april_html_files/april23.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/image_old_gif-0.png" alt="Old Gif Icon">
+        <p>04_23</p>
+    </a>
     
     
 </div>
