--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
         <img src="https://win98icons.alexmeub.com/icons/png/image_old_gif-0.png" alt="Old Gif Icon">
         <p>04_23</p>
     </a>
+
+    <a href="april_html_files/april24.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/calculator-0.png" alt="Calculator Icon">
+        <p>04_24</p>
+    </a>
     
     
 </div>
