April 25 poem Live

--- a/index.html
+++ b/index.html
@@ -200,6 +200,13 @@
         <img src="https://win98icons.alexmeub.com/icons/png/calculator-0.png" alt="Calculator Icon">
         <p>04_24</p>
     </a>
+
+    <a href="april_html_files/april25.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/calculator-0.png" alt="Calculator Icon">
+        <p>04_25</p>
+    </a>
+
+
     
     <a href="#" id="open-media-player">
         <img src="https://win98icons.alexmeub.com/icons/png/wm-5.png" alt="Media Player Icon">
