--- a/april_html_files/april25.html
+++ b/april_html_files/april25.html
@@ -9,16 +9,16 @@
             <h3> April 25th Poem: </h3>
             <img src="../poem_images/juri_talvet.jpg" alt="Juri Talvet Poem" class="responsive-img">
             <p class="image-caption">Source: Talvet, Juri. Of Snow, of Soul. Translated by H.L. Hix, Guernica Editions, 1 Aug. 2010, p. 21.</p>
+            <p class ="image-caption">Comments: STC is Samuel Taylor Coleridge (the albatross guy). 
+                Christabel is an unfinished poem STC wrote. 
+                Alberto Cairo is a heteronym for Fernando Pessoa, a Portuguese poet (never heard of him before). 
+                EAP is Edgar Allen Poe. 
+                Gottingen is a city in Germany. 
+                I think Veenderstrasse is a street.
+                The original poem was writtein in Estonian.
+                I don't understand the second stanza. 
+                How hard should you try to understand something before giving up? I guess it depends on what you hope to get out of it. </p>
         </div>
 
-        <p>Comments: STC is Samuel Taylor Coleridge (the albatross guy). 
-            Christabel is an unfinished poem STC wrote. 
-            Alberto Cairo is a heteronym for Fernando Pessoa, a Portuguese poet (never heard of him before). 
-            EAP is Edgar Allen Poe. 
-            Gottingen is a city in Germany. 
-            I think Veenderstrasse is a street.
-            The original poem was writtein in Estonian.
-            I don't understand the second stanza. 
-            How hard should you try to understand something before giving up? I guess it depends. </p>
     </body>
 </html>
