--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </a>
 
     <a href="https://poets.org/poem/loneliness-0" >
-        <img src="https://win98icons.alexmeub.com/icons/png/color_profile_gray-0.png" alt="Color Progile Gray Icon"
+        <img src="https://win98icons.alexmeub.com/icons/png/color_profile-0.png" alt="Color Progile Icon"
         <p>04_16</p>
     </a>
     
@@ -204,6 +204,11 @@
     <a href="april_html_files/april25.html">
         <img src="https://win98icons.alexmeub.com/icons/png/time_and_date-2.png" alt="Date and Time Icon">
         <p>04_25</p>
+    </a>
+
+    <a href="april_html_files/april26.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/winrep-1.png" alt="Winrip Icon">
+        <p>04_26</p>
     </a>
 
     
