--- a/april_html_files/april26.html
+++ b/april_html_files/april26.html
@@ -12,7 +12,7 @@
             <h2> Context </h2>
             <img src="../poem_images/kannada_context.jpg" alt="Kannada Poems Context" class="responsive-img">
             <p class="image-caption">Source: Lawall, Sarah N, and Maynard Mack. The Norton Anthology of World Literature. Second Edition ed., vol. B, New York, W. W. Norton & Company, 29 July 2003.</p>
-            <p class="image-caption">Note: Poems 703 and 820 are by Basavanna.</p>
+            <p class="image-caption">Comments: Poems 703 and 820 are by Basavanna.</p>
 
         </div> 
     </body>
