--- a/index.html
+++ b/index.html
@@ -215,15 +215,11 @@
         <img src="https://win98icons.alexmeub.com/icons/png/template_nework_conn-4.png" alt="Template Network Icon">
         <p>04_27</p>
     </a>
-
     
-
-    <!--
-    <a href="">
-        <img src="" alt="">
+    <a href="https://www.poetryfoundation.org/poetrymagazine/browse?volume=187&issue=4&page=21">
+        <img src="https://win98icons.alexmeub.com/icons/png/message_file-0.png" alt="Message File Icon">
         <p>04_28</p>
     </a>
-    -->
 
     <!--
     <a href="">
