Create task bar

--- a/index.html
+++ b/index.html
@@ -248,5 +248,12 @@
      -->
 </div>
 
+<div class="start-bar">
+    <button class="start-button">Start</button>
+    <div class="start-icons">
+      <img src="images/speaker_icon.png" alt="Speaker" width="16">
+      <span class="clock">10:45 PM</span>
+    </div>
+  </div>
 
 </html>
