--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <button class="start-button">Start</button>
     <div class="start-icons">
       <img src="images/speaker_icon.png" alt="Speaker" width="16">
-      <span class="clock">10:45 PM</span>
+      <span class="clock" id="start-clock">00:00</span>
     </div>
   </div>
 
