--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
 <div class="start-bar">
     <button class="start-button">Start</button>
     <div class="start-icons">
-      <img src="images/speaker_icon.png" alt="Speaker" width="16">
-      <span class="clock" id="start-clock">00:00</span>
+      <img src="https://win98icons.alexmeub.com/icons/png/loudspeaker_rays-0.png" alt="Speaker" width="16">
+      <span id="start-clock" class="clock">00:00</span>
     </div>
   </div>
 
