--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
 </div>
 
 <div class="start-bar">
-    <button class="start-button">Start</button>
+    <button class="start-button"><img src="https://win98icons.alexmeub.com/icons/png/windows_slanted-0.png">Start</button>
     <div class="start-icons">
-      <img src="https://win98icons.alexmeub.com/icons/png/loudspeaker_rays-0.png" alt="Speaker" width="16">
+      <img src="https://win98icons.alexmeub.com/icons/png/loudspeaker_rays_green-0.png" alt="Speaker" width="16">
       <span id="start-clock" class="clock">00:00</span>
     </div>
-  </div>
+</div>
 
 </body> 
 
