April 29 Poems Live

--- a/index.html
+++ b/index.html
@@ -220,13 +220,11 @@
         <img src="https://win98icons.alexmeub.com/icons/png/message_file-0.png" alt="Message File Icon">
         <p>04_28</p>
     </a>
-
-    <!--
-    <a href="">
-        <img src="" alt="">
+    
+    <a href="april_html_files/april29.html">
+        <img src="https://win98icons.alexmeub.com/icons/png/wia_img_color-1.png" alt="Wia Img Color Icon">
         <p>04_29</p>
     </a>
-    -->
     
     <!--
     <a href="https://www.poetryfoundation.org/poems/89519/blueberries">
