Media Player Test

--- a/index.html
+++ b/index.html
@@ -233,17 +233,12 @@
     </a>
     -->
 
-    <!-- 
-    <a href="#" id="open-media-player">
-        <img src="https://win98icons.alexmeub.com/icons/png/wm-5.png" alt="Media Player Icon">
-        <p></p>
-      </a>
+    <a href="media-player/index.html" target="_blank">
+        <img src="https://win98icons.alexmeub.com/icons/png/wm_file-4.png" alt="WM File">
+        <p>bb</p>
+    </a>
       
-      <div id="media-player-popup" style="display:none;">
-        <iframe src="media-player/media-player.html" width="400" height="300" frameborder="0"></iframe>
-        <button id="close-media-player">Close</button>
-      </div>
-     -->
+      
 </div>
 
 <div class="start-bar">
