--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
     <a href="media-player/index.html" target="_blank">
         <img src="https://win98icons.alexmeub.com/icons/png/wm_file-4.png" alt="WM File">
-        <p>bb</p>
+        <p>Media</p>
     </a>
       
       
