--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </a>
     -->
 
-    <a href="media-player/video_file_1.html target=">
+    <a href="media-player/video_file_1.html">
         <img src="https://win98icons.alexmeub.com/icons/png/wm_file-4.png" alt="WM File">
         <p>Media</p>
     </a>
