--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <p>Media Player</p>
     </a>
 
-    <a href="https://youtu.be/EN9auBn6Jys?si=5yyfmdaWsLX-ia8u&t=93">
+    <a href="https://youtu.be/EN9auBn6Jys?si=WYLiDe4wmok_IxyI">
         <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
         <p>CD</p>
     </a>
