--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     
     <a href="may1.html">
         <img src="https://win98icons.alexmeub.com/icons/png/standby_monitor_moon-4.png" alt="Stand By Monitor Moon Icon">
-        <p>05_01</p>
+        <p>BSoD</p>
     </a>
 
     
