--- a/may1.html
+++ b/may1.html
@@ -1,2 +1,13 @@
-.wrapper
-  span.bsod
+<html>
+    <head>
+        <title>May 1</title>
+        <link rel="stylesheet" href="bsod.css">
+        <script src="bsod.js" defer></script>
+    </head>
+
+    <body>
+        <div class="wrapper">
+            <span class="bsod"></span>
+        </div>
+    </body>
+</html>
