--- a/may1.html
+++ b/may1.html
@@ -1,13 +1,23 @@
 <html>
     <head>
-        <title>May 1</title>
+        <title>BSoD</title>
         <link rel="stylesheet" href="bsod.css">
-        <script src="bsod.js" defer></script>
     </head>
 
-    <body>
-        <div class="wrapper">
-            <span class="bsod"></span>
+<body>
+    <div class="overlay overlay--scanline"></div>
+    <div class="overlay overlay--vignette"></div>
+    <div class="flex-full-justify">
+    <div class="flex-inner">
+        <div class="text-center">
+        <h1>approximations</h1>
         </div>
+        <p>A fatal exception 0x1337 has occurred at ./approximations.html. The current website will be terminated.</p>
+        <ul>
+        <li><p>April is over. I had fun learning to code this website, and though there is more I want to do (make a start menu, clickable windows, consistent styling, a working media player), I'm fine with what I've done. April is over, and I hope my audience of none has enjoyed this little compilation of poems. <3</p></li>
+        </ul>
+        <p class="text-center">Press F5 to continue <span class="blink">_</span></p>
+    </div>
+    </div>
     </body>
 </html>
