--- a/may1.html
+++ b/may1.html
@@ -14,7 +14,7 @@
         </div>
         <p>A fatal exception 0x1337 has occurred at ./approximations.html. The current website will be terminated.</p>
         <ul>
-        <li><p>April is over. I had fun learning to code this website, and though there is more I want to do (make a start menu, clickable windows, consistent styling, a working media player), I'm fine with what I've done. April is over, and I hope my audience of none has enjoyed this little compilation of poems. <3</p></li>
+        <li><p>Well, April is over. I had fun learning to code this website, and though there is more I want to do (make a start menu, clickable windows, consistent styling, a working media player), I'm fine with what I got done. April is over, and I hope my audience of none has enjoyed this little compilation of poems. <3</p></li>
         </ul>
         <p class="text-center">Press F5 to continue <span class="blink">_</span></p>
     </div>
