--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </a>
     
     <a href="may1.html">
-        <img src="https://win98icons.alexmeub.com/icons/png/standby_monitor_moon-4.png" alt="Stand By Monitor Moon Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/document-0.png" alt="Document 0 Icon">
         <p>05_01</p>
     </a>
 
