Changed some icons

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </a>
 
     <a href="https://www.folger.edu/explore/shakespeares-works/shakespeares-sonnets/read/129/">
-        <img src="https://win98icons.alexmeub.com/icons/png/netshow_notransm-2.png" alt="Netshow Notransm Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/web_file-2.png" alt="Web File 3 Icon">
         <p>04_05</p>
     </a>
 
@@ -117,7 +117,7 @@
      </a>
 
       <a href="april_html_files/april9.html" >
-       <img src="https://win98icons.alexmeub.com/icons/png/outlook_express-4.png" alt="Outlook Express Icon">
+       <img src="https://win98icons.alexmeub.com/icons/png/outlook_express_tack-3.png" alt="Outlook Express Tack Icon">
        <p>04_09</p>
      </a>
 
@@ -142,7 +142,7 @@
     </a>   
     
     <a href="https://poets.org/poem/galaxies" >
-        <img src="https://win98icons.alexmeub.com/icons/png/shut_down_cool-5.png" alt="Shut Down Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/graphedit_file_2-0.png" alt="Graph Edit File 2 Icon">
         <p>04_14</p>
     </a>
 
@@ -207,7 +207,7 @@
     </a>
 
     <a href="april_html_files/april26.html">
-        <img src="https://win98icons.alexmeub.com/icons/png/winrep-1.png" alt="Winrip Icon">
+        <img src="https://win98icons.alexmeub.com/icons/png/script_file_yellow-1.png" alt="Script File Yellow Icon">
         <p>04_26</p>
     </a>
     
