--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     </a>
 
     <a href="https://gvenna.github.io/win95-media-player-forked/quickstart.html">
-        <img src="https://win98icons.alexmeub.com/icons/png/wm_file-5.png" alt="WM File">
+        <img src="https://win98icons.alexmeub.com/icons/png/wm-4.png" alt="Media Player Icon">
         <p>Media Player</p>
     </a>
 
