--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <a href="https://youtu.be/EN9auBn6Jys?si=WYLiDe4wmok_IxyI">
         <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
-        <p>CD</p>
+        <p>sugar_water.mp3</p>
     </a>
 
     
