--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
     
     <a href="https://drive.google.com/file/d/1KQevwLJ0Pb2-4Nd6IFZnK12A4XnHyjLH/view?usp=drivesdk">
         <img src="https://win98icons.alexmeub.com/icons/png/wm_file-4.png" alt="WM File">
-        <p>Bb_video</p>
+        <p>Bb.AVI</p>
     </a>
 
     <a href="https://gvenna.github.io/win95-media-player-forked/quickstart.html">
         <img src="https://win98icons.alexmeub.com/icons/png/wm-4.png" alt="Media Player Icon">
-        <p>Media Player</p>
+        <p>Media Player 5.1</p>
     </a>
 
     <a href="https://youtu.be/EN9auBn6Jys?si=WYLiDe4wmok_IxyI">
         <img src="https://win98icons.alexmeub.com/icons/png/cd_audio_cd_a-4.png" alt="Audio CD File">
-        <p>sugar_water.mp3</p>
+        <p>track01.cda</p>
     </a>
 
     
